mq/environments/dev/mq-metric-samples/mq-metric-samples/route.yaml
---
# Source: mq-metric-samples/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mq-metric-samples
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
spec:
  to:
    kind: Service
    name: mq-metric-samples
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
